<resources>
    <string name="app_name">Plan &amp; Go</string>

    <string name="home_nav_text">Rechercher</string>
    <string name="trips_nav_text">Mes trajets</string>
    <string name="myaccount_nav_text">Mon compte</string>
    <string name="auth_nav_text">Authentification</string>

    <string name="home_image_content_description">Background image</string>
    <string name="home_title_one">Où allez vous ?</string>
    <string name="home_label_one">Départ</string>
    <string name="home_label_two">Destination</string>
    <string name="home_hint_one">ex : ESTIAM</string>
    <string name="home_hint_two">ex : Le Grand REX</string>
    <string name="home_button_one">Calculer mon trajet</string>

    <string name="trips_title_one">Mes trajets</string>
    <string name="trips_title_two">En cours…</string>
    <string name="trips_title_three">Terminés</string>
    <string name="trips_item_title_one">Destination</string>
    <string name="trips_item_title_two">Prix</string>
    <string name="trips_item_image_content_description">Item image</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Adresse email</string>
    <string name="prompt_email_hint">jane.doe@mail.com</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_password_hint">****************</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_up">S\'inscrire</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>