<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/home_image_content_description"
            android:scaleType="center"
            app:srcCompat="@drawable/plan__2__prev_ui" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/prompt_email"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email_hint"
            android:minHeight="48dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/prompt_password"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="35dp"
            android:layout_below="@id/editTextEmail"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:hint="@string/prompt_password_hint"
            android:minHeight="48dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#31C1DB"
            android:text="@string/action_sign_in" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="OU"
            android:textColor="#C6C6C6"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSignIn"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#31C1DB"
            android:text="@string/action_sign_up" />

    </LinearLayout>


</ScrollView>