<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/home_image_content_description"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/home_image_content_description"
            android:scaleType="center"
            app:srcCompat="@drawable/free_photo_of_ville_vehicules_rue_voiture" />

        <!--TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="D'où partez-vous ?"
            android:textSize="24sp" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/home_title_one"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:text="@string/home_label_one"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTripStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/home_hint_one"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:text="@string/home_label_two"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTripEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/home_hint_two"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />


        <!--FrameLayout
            android:id="@+id/destination_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/-->

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#009688"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/home_button_one"
            android:textSize="14sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/home_title_two"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>