<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.plan_and_go.ui.TripsFragment"
    android:paddingHorizontal="30dp"
    android:paddingVertical="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/trips_title_one"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/trips_title_two"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/trips_title_three"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/listOldTrips"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            tools:ignore="NestedScrolling" />

    </LinearLayout>

</ScrollView>