<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/baseline_directions_car_24"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/trips_item_image_content_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/trips_item_title_one"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textItemTripEnd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/trips_item_title_one"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/trips_item_title_two"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textItemTripPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/trips_item_title_two"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>